# myBFT2

./: .bash_history  .gitattributes  Cargo.toml  README.md  client.py  docker-compose.yml  dockerfile  server.py
benchmark/: .committee.json  .node-0.json  .node-1.json  .node-10.json  .node-11.json  .node-12.json  .node-13.json  .node-14.json  .node-15.json  .node-16.json  .node-17.json  .node-18.json  .node-19.json  .node-2.json  .node-3.json  .node-4.json  .node-5.json  .node-6.json  .node-7.json  .node-8.json  .node-9.json  .node-tss-0.json  .node-tss-1.json  .node-tss-10.json  .node-tss-11.json  .node-tss-12.json  .node-tss-13.json  .node-tss-14.json  .node-tss-15.json  .node-tss-16.json  .node-tss-17.json  .node-tss-18.json  .node-tss-19.json  .node-tss-2.json  .node-tss-3.json  .node-tss-4.json  .node-tss-5.json  .node-tss-6.json  .node-tss-7.json  .node-tss-8.json  (+5 more)
benchmark/.db-0/: IDENTITY  LOG
benchmark/.db-1/: IDENTITY  LOG
benchmark/.db-2/: IDENTITY  LOG
benchmark/.db-3/: IDENTITY  LOG
benchmark/aws/: instance.py  remote.py  settings.py
benchmark/benchmark/: aggregate.py  commands.py  config.py  local.py  logs.py  plot.py  utils.py
benchmark/plots/: latency-20-any-16-0-any.txt  latency-4-any-16-0-any.txt  latency-7-any-16-0-any.txt  robustness-20-x-16-0-any.txt  robustness-4-x-16-0-any.txt  robustness-7-x-16-0-any.txt  tps-x-any-16-0-3000.txt  tps-x-any-16-0-6000.txt
benchmark/results/: bench-20-70000-16-0.txt  bench-20-70000-16-3.txt  bench-7-70000-16-0.txt  latency-20-70000-16-0.txt  latency-20-70000-16-3.txt  latency-7-70000-16-0.txt  temp_latency.txt  temp_result.txt  temp_txs.txt  txs-20-70000-16-0.txt  (+2 more)
consensus/: Cargo.toml
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
mempool/: Cargo.toml  README.md
network/: Cargo.toml  README.md
network/src/: lib.rs
network/src/tests/: network_tests.rs
node/: Cargo.toml
node/src/: client.rs  config.rs  main.rs  node.rs
store/: Cargo.toml  README.md
(+47 files in other folders)
