[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.6.4", features= ["codec"] }
thiserror = "1.0.21"
bytes = "1.0.1"
bincode = "1.3.1"
log = "0.4.0"
futures = "0.3.13"
serde = "1.0"